WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137480
Fix a warning when passing an NSInteger to abs().
https://bugs.webkit.org/show_bug.cgi?id=137480
Summary
Fix a warning when passing an NSInteger to abs().
Andy Estes
Reported
2014-10-07 00:01:57 PDT
Fix a warning when passing an NSInteger to abs().
Attachments
Patch
(2.35 KB, patch)
2014-10-07 00:04 PDT
,
Andy Estes
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2014-10-07 00:04:07 PDT
Created
attachment 239399
[details]
Patch
Andy Estes
Comment 2
2014-10-07 00:06:35 PDT
Committed
r174389
: <
http://trac.webkit.org/changeset/174389
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug