Fix a warning when passing an NSInteger to abs(). https://bugs.webkit.org/show_bug.cgi?id=137480

Reviewed by Mark Rowe.

Use std::abs() instead, which is overloaded for both long (a.k.a. NSInteger) and int.

* platform/graphics/avfoundation/objc/CDMSessionMediaSourceAVFObjC.mm:
(WebCore::CDMSessionMediaSourceAVFObjC::layerDidReceiveError):
(WebCore::CDMSessionMediaSourceAVFObjC::rendererDidReceiveError):

Canonical link: https://commits.webkit.org/155303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174389 268f45cc-cd09-0410-ab3c-d52691b4dbfc